--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: [Visualització de dades]
-description: [Visualització de dades: pràctica II]
+title: Visualització de dades
+description: Visualització de dades - pràctica II
 show_downloads: false
-google_analytics:
 theme: jekyll-theme-tactile
+lang: ca
+author: [Blanca Domènech Pellejà]
