--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Visualització de dades
-description: Blanca Domènech Pellejà: visualització de dades - pràctica II
+description: Blanca Domènech Pellejà - visualització de dades pràctica II
 show_downloads: false
 theme: jekyll-theme-tactile
 lang: ca
